# ai_agent

./: .env.example  .gitignore  README.md
backend/: alembic.ini  prompt.txt  pyproject.toml
backend/app/: config.py  llm.py  logging_conf.py  main.py  mcp_server.py
backend/app/api/: deps.py  insight_router.py
backend/app/auth/: dependencies.py  router.py  schemas.py  security.py
backend/app/db/: session.py  target_session.py
backend/app/db/models/: __init__.py  insight_definition.py  interaction.py  user.py
backend/app/graph/: build.py  fill_slots_pipeline.py  sql_builder.py  state.py
backend/app/graph/nodes/: clarify.py  error_handler.py  fill_slots.py  intent_detect.py  intent_lookup.py  narrative.py  persist_interaction.py  sanitize.py
backend/app/middleware/: error_handlers.py  request_id.py
backend/app/narrative_adapter/: interface.py  stub_azure_impl.py
backend/app/rag/: chroma_client.py  column_matcher.py  embeddings.py  intent_matcher.py
backend/app/schemas/: insight.py  sse.py
backend/app/security_layer/: injection_classifier.py  injection_heuristics.py  pii.py
backend/config/insights/: accounts_by_brokerage_sweep_cash.yaml  clients_by_balance_city.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users.py  0002_create_insight_definitions.py  0003_create_interactions.py
backend/scripts/: sample_agent.py
backend/seed/: column_metadata.yaml  intent_examples.yaml  seed_chroma.py  seed_insight_definitions.py
backend/tests/: conftest.py  test_api_sse.py  test_auth.py  test_graph_nodes.py  test_sql_builder.py
(+22 files in other folders)
