[project]
name = "insight-agent"
version = "0.1.0"
description = "Natural-language insight agent: sanitizes input, detects intent via RAG, builds and executes SQL, and streams a generated narrative."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.13",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.28",
    "chromadb>=0.5.23",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "spacy>=3.8.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pyjwt>=2.10.1",
    "argon2-cffi>=23.1.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "email-validator>=2.2.0",
    "mcp>=1.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
